' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <http://www.gnu.org/licenses/>.
@startuml Kunde

!pragma useNewPackage
skinparam classAttributeIconSize 0
skinparam componentStyle uml2
' skinparam monochrome true

package org.springframework.security.core.userdetails {
    class User {
    }
}

package com.acme.kunde {
    package config.security {
        User <|-- CustomUser
        class CustomUser {
        }
    }
    package entity #DDDDDD {
        Kunde *--> "1" Umsatz : umsatz
        Kunde *--> "1" Adresse : adresse
        Kunde *--> "1" GeschlechtType : geschlecht
        Kunde *--> "1" FamilienstandType : familienstand
        Kunde *--> "*" InteresseType : interessen
        Kunde *--> "1" CustomUser : customUser
        Kunde ..> KundeId

        class KundeId << typealias >> {
        }

        class Umsatz {
            - betrag: BigDecimal
            - waehrung: Currency
        }

        class Adresse {
            - @Pattern plz: String
            - ort: String
        }

        enum GeschlechtType {
            MAENNLICH
            WEIBLICH
            DIVERS
        }

        enum FamilienstandType {
            LEDIG
            VERHEIRATET
            GESCHIEDEN
            VERWITWET
        }

        enum InteresseType {
            SPORT
            LESEN
            REISEN
        }

        class Kunde << entity >> << @Document >> {
            - @JsonIgnore id : KundeId
            - @Version @JsonIgnore version : Int
            - @Pattern @NotEmpty nachname : String
            - @Email email : String
            - @Min @Max kategorie: Int
            - newsletter : Boolean
            - @Past geburtsdatum: LocalDate
            - homepage: URL
            - username: String
            - @CreatedDate @JsonIgnore erzeugt: LocalDateTime
            - @LastModifiedDate @JsonIgnore aktualisiert: LocalDateTime
        }
    }
}

hide empty members

footer (c) Jürgen Zimmermann

@enduml
